<resources>
    <string name="app_name">I Was There!</string>

    <!-- Strings related to login -->
    <string name="prompt_nusp">NUSP</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_confirm_new_password">Confirm new password</string>
    <string name="prompt_new_password">New password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="action_delete_account">Delete account</string>
    <string name="action_save_profile">Save changes</string>
    <string name="action_sign_up">Register</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="nusp">N˚USP</string>
    <string name="email">Email</string>
    <string name="passwd">Password</string>
    <string name="confirmPasswd">Confirm Password</string>
    <string name="register">Create an account</string>
    <string name="edit_register">Edit register</string>


    <!-- Errors -->
    <string name="error_invalid_nusp">This NUSP is invalid</string>
    <string name="error_invalid_seminar_id">This seminar id is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Invalid nusp or password</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_password_mismatch">The passwords must match</string>
    <string name="error_user_exists">This NUSP is already registered</string>
    <string name="error_connection">An error occurred. Please try again later.</string>

    <!-- Title -->
    <string name="title_activity_seminar_list">Seminar List</string>
    <string name="title_activity_sign_up">Register</string>
    <string name="title_activity_add_seminar">New Seminar</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_attendees_list">Attendees</string>
    <string name="title_send_confirmation">Send Confirmation</string>
    <string name="title_text_confirmation">Send Text Confirmation</string>


    <!-- Strings related to seminars -->
    <string name="add_seminar">Add Seminar</string>
    <string name="seminar_section">Seminar Section</string>
    <string name="seminar_name">Seminar Name</string>
    <string name="go_to_seminars">Seminars</string>
    <string name="close_submissions">Close submissions</string>

    <!-- Strings related to QR-Code -->
    <string name="scan_qr_code">Confirm by QR-Code</string>
    <string name="generate_qr_code">Generate QR-Code</string>
    <string name="error_null_qr_code">The contents from QR are weird. Try another QR-Code</string>
    <string name="error_wrong_seminar_id">This QRCode doesn\'t correspond to the seminar. Try again with the seminar QR Code</string>
    <string name="confirmation_successed">Your presence was confirmed with success</string>
    <string name="students_confirmation_successed">Presence of selected students was confirmed with success</string>
    <string name="content">Content: </string>
    <string name="format">Format: </string>
    <string name="back_button">Back to attendees</string>

    <!-- Strings related to Send Presence Confirmation -->
    <string name="your_name">Your name</string>
    <string name="confirm_presence">Confirm Presence</string>
    <string name="other_confirmation">Other form to confirm</string>
    <string name="pending_request">Your request was done with success. Waiting teacher\'s approval</string>

    <string name="go_to_update_register">My account</string>
    <string name="search_hint">Search</string>
    <string name="teacher_checkbox">I\'m a teacher</string>
    <string name="delete_message">Are you sure you want to delete your account?</string>
    <string name="password_placeholder">password</string>

    <string name="i_was_there">I was there</string>
    <string name="students_were_there">Students were there</string>
    <string name="empty_list">There doesn\'t seem to be anything here yet</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_generate_qr">GenerateQrActivity</string>
</resources>
